[tool.poetry]
name = "lidar"
version = "0.1.0"
description = ""
authors = ["JakubSokol <kubas.sokol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rplidar = "^0.9.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
